--- a/pandas/Operations.ipynb
+++ b/pandas/Operations.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7e7b7f5d",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
        "2   3  a@b.com"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "0d89af3b",
    "metadata": {},
    "outputs": [
@@ -415,18 +415,18 @@
      "data": {
       "text/plain": [
        "email\n",
-       "a@b.com     True\n",
-       "c@d.com    False\n",
-       "Name: count, dtype: bool"
+       "a@b.com    2\n",
+       "c@d.com    1\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "person.value_counts('email')>1"
+    "person.value_counts('email')"
    ]
   },
   {
