--- a/pandas/Subset.ipynb
+++ b/pandas/Subset.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e8de0e55",
    "metadata": {},
    "outputs": [
@@ -58,45 +58,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
-       "      <td>0.386030</td>\n",
-       "      <td>2.084019</td>\n",
-       "      <td>-0.376519</td>\n",
-       "      <td>0.230336</td>\n",
+       "      <td>2.706850</td>\n",
+       "      <td>0.628133</td>\n",
+       "      <td>0.907969</td>\n",
+       "      <td>0.503826</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>0.681209</td>\n",
-       "      <td>1.035125</td>\n",
-       "      <td>-0.031160</td>\n",
-       "      <td>1.939932</td>\n",
+       "      <td>0.651118</td>\n",
+       "      <td>-0.319318</td>\n",
+       "      <td>-0.848077</td>\n",
+       "      <td>0.605965</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C</th>\n",
-       "      <td>-1.005187</td>\n",
-       "      <td>-0.741790</td>\n",
-       "      <td>0.187125</td>\n",
-       "      <td>-0.732845</td>\n",
+       "      <td>-2.018168</td>\n",
+       "      <td>0.740122</td>\n",
+       "      <td>0.528813</td>\n",
+       "      <td>-0.589001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>D</th>\n",
-       "      <td>-1.382920</td>\n",
-       "      <td>1.482495</td>\n",
-       "      <td>0.961458</td>\n",
-       "      <td>-2.141212</td>\n",
+       "      <td>0.188695</td>\n",
+       "      <td>-0.758872</td>\n",
+       "      <td>-0.933237</td>\n",
+       "      <td>0.955057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>E</th>\n",
-       "      <td>0.992573</td>\n",
-       "      <td>1.192241</td>\n",
-       "      <td>-1.046780</td>\n",
-       "      <td>1.292765</td>\n",
+       "      <td>0.190794</td>\n",
+       "      <td>1.978757</td>\n",
+       "      <td>2.605967</td>\n",
+       "      <td>0.683509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F</th>\n",
-       "      <td>-1.467514</td>\n",
-       "      <td>-0.494095</td>\n",
-       "      <td>-0.162535</td>\n",
-       "      <td>0.485809</td>\n",
+       "      <td>0.302665</td>\n",
+       "      <td>1.693723</td>\n",
+       "      <td>-1.706086</td>\n",
+       "      <td>-1.159119</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -104,15 +104,15 @@
       ],
       "text/plain": [
        "          W         X         Y         Z\n",
-       "A  0.386030  2.084019 -0.376519  0.230336\n",
-       "B  0.681209  1.035125 -0.031160  1.939932\n",
-       "C -1.005187 -0.741790  0.187125 -0.732845\n",
-       "D -1.382920  1.482495  0.961458 -2.141212\n",
-       "E  0.992573  1.192241 -1.046780  1.292765\n",
-       "F -1.467514 -0.494095 -0.162535  0.485809"
+       "A  2.706850  0.628133  0.907969  0.503826\n",
+       "B  0.651118 -0.319318 -0.848077  0.605965\n",
+       "C -2.018168  0.740122  0.528813 -0.589001\n",
+       "D  0.188695 -0.758872 -0.933237  0.955057\n",
+       "E  0.190794  1.978757  2.605967  0.683509\n",
+       "F  0.302665  1.693723 -1.706086 -1.159119"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "4d0eea1b",
    "metadata": {},
    "outputs": [
@@ -271,18 +271,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A</th>\n",
-       "      <td>0.386030</td>\n",
-       "      <td>2.084019</td>\n",
+       "      <td>2.706850</td>\n",
+       "      <td>0.628133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
-       "      <td>0.681209</td>\n",
-       "      <td>1.035125</td>\n",
+       "      <td>0.651118</td>\n",
+       "      <td>-0.319318</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>E</th>\n",
-       "      <td>0.992573</td>\n",
-       "      <td>1.192241</td>\n",
+       "      <th>F</th>\n",
+       "      <td>0.302665</td>\n",
+       "      <td>1.693723</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -290,12 +290,12 @@
       ],
       "text/plain": [
        "          W         X\n",
-       "A  0.386030  2.084019\n",
-       "B  0.681209  1.035125\n",
-       "E  0.992573  1.192241"
+       "A  2.706850  0.628133\n",
+       "B  0.651118 -0.319318\n",
+       "F  0.302665  1.693723"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,6 +303,27 @@
    "source": [
     "df.loc[df['W'] > 0.3, ['W','X']]\n",
     "# Select rows meeting logical condition, and only the specific columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4d44abce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df[df['W']>0.3])"
    ]
   },
   {
