add some python projects

--- a/pandas/Groupby.ipynb
+++ b/pandas/Groupby.ipynb
@@ -2,20 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "# Create dataframe\n",
-    "data = pd.DataFrame({'Company':['GOOG','GOOG','MSFT','MSFT','FB','FB'],\n",
-    "       'Person':['Sam','Charlie','Amy','Vanessa','Carl','Sarah'],\n",
-    "       'Sales':[200,120,340,124,243,350]})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -95,18 +82,23 @@
        "5      FB    Sarah    350"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "# Create dataframe\n",
+    "data = pd.DataFrame({'Company':['GOOG','GOOG','MSFT','MSFT','FB','FB'],\n",
+    "       'Person':['Sam','Charlie','Amy','Vanessa','Carl','Sarah'],\n",
+    "       'Sales':[200,120,340,124,243,350]})\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +107,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +127,7 @@
        "'Carl'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,6 +758,348 @@
     "ads.groupby('ad_id')['action'].apply(lambda x: round(\n",
     "    (sum(x=='Clicked')/(sum(x=='Clicked')+sum(x=='Viewed'))*100) if (sum(x=='Clicked')+sum(x=='Viewed')) >0 \n",
     "    else 0 ,2)).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sell_date</th>\n",
+       "      <th>product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>Headphone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-06-01</td>\n",
+       "      <td>Pencil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-06-02</td>\n",
+       "      <td>Mask</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>Basketball</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-06-01</td>\n",
+       "      <td>Bible</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-06-02</td>\n",
+       "      <td>Mask</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>T-Shirt</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    sell_date     product\n",
+       "0  2020-05-30   Headphone\n",
+       "1  2020-06-01      Pencil\n",
+       "2  2020-06-02        Mask\n",
+       "3  2020-05-30  Basketball\n",
+       "4  2020-06-01       Bible\n",
+       "5  2020-06-02        Mask\n",
+       "6  2020-05-30     T-Shirt"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "activities = pd.DataFrame({\n",
+    "    'sell_date':['2020-05-30', '2020-06-01','2020-06-02','2020-05-30', '2020-06-01','2020-06-02','2020-05-30'],\n",
+    "    'product':['Headphone','Pencil','Mask','Basketball','Bible','Mask','T-Shirt']\n",
+    "})\n",
+    "activities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_sold</th>\n",
+       "      <th>products</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sell_date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-05-30</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Basketball Headphone T-Shirt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-01</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bible Pencil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-02</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Mask</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            num_sold                      products\n",
+       "sell_date                                         \n",
+       "2020-05-30         3  Basketball Headphone T-Shirt\n",
+       "2020-06-01         2                  Bible Pencil\n",
+       "2020-06-02         1                          Mask"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ac_groups = activities.groupby('sell_date')\n",
+    "ac_groups.agg(\n",
+    "    num_sold = ('product', 'nunique'),\n",
+    "    products = ('product', lambda x:' '.join(sorted(set(x))))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>departId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Joe</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jim</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Henry</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Sam</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Max</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id   name  salary  departId\n",
+       "0   1    Joe   70000         1\n",
+       "1   2    Jim   90000         1\n",
+       "2   3  Henry   80000         2\n",
+       "3   4    Sam   60000         2\n",
+       "4   5    Max   90000         1"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employee = pd.DataFrame({\n",
+    "    'id':[1,2,3,4,5],\n",
+    "    'name':['Joe','Jim','Henry','Sam','Max'],\n",
+    "    'salary':[70000,90000,80000,60000,90000],\n",
+    "    'departId':[1,1,2,2,1]\n",
+    "})\n",
+    "employee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>departId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jim</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Henry</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Max</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id   name  salary  departId\n",
+       "1   2    Jim   90000         1\n",
+       "2   3  Henry   80000         2\n",
+       "4   5    Max   90000         1"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find highest salary per department\n",
+    "max_series = employee.groupby('departId')['salary'].transform(max)\n",
+    "employee[employee['salary']==max_series]"
    ]
   }
  ],
